frontend/tests/cases/positive/synInstanceNatParameter.gr
interface Simple a (c : Nat)

data A = A

-- An instance with a nat parameter
instance Simple A [1]
